# amt-explore

./: .gitignore  INTEGRATION.md  README.md  pyproject.toml
amt/: __init__.py  cli.py  core.py  export.py  viz.py
docs/: LICENSE  index.htm  webviewer-integration.md
docs/data/: PotterAttributionExample_short_domainmodel.ttl  PotterAttributionExample_short_instances.ttl  python-export-example.ttl
docs/js/: amt-export.js  amt-render.js  amt.js
docs/output/: amt-graph-reasoned.cypher  amt-graph-standalone.ttl
examples/: PotterAttributionExample_short.ttl
notebooks/: amt-explore.ipynb
tests/: test_amt.py
